# recos-antibioprophylaxie-SFAR

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  arreter.sh  demarrer.sh  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: search.py  (+3 more)
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/api/: deps.py
backend/app/api/endpoints/: antibiotics.py  categories.py  procedures.py
backend/app/api/utils/: adapters.py
backend/app/core/: config.py  database.py
backend/app/models/: base.py  models.py
backend/app/repositories/: base_repository.py  repositories.py
backend/app/schemas/: schemas.py
backend/app/services/: base_service.py  services.py
backend/application/dto/: antibiotique_dto.py  dto_base.py  intervention_chirurgicale_dto.py  recommandation_antibioprophylaxie_dto.py  specialite_chirurgicale_dto.py
backend/application/services/: service_application_base.py  service_intervention_chirurgicale.py  service_specialite_chirurgicale.py
backend/domaine/entites/: antibiotique.py  entite_base.py  intervention_chirurgicale.py  recommandation_antibioprophylaxie.py  specialite_chirurgicale.py
backend/domaine/ports/: repository_antibiotique.py  repository_base.py  repository_intervention_chirurgicale.py  repository_recommandation_antibioprophylaxie.py  repository_specialite_chirurgicale.py
backend/domaine/repositories/: repository_intervention_chirurgicale_interface.py  repository_specialite_chirurgicale_interface.py
backend/domaine/services/: service_antibiotique.py  service_base.py  service_intervention_chirurgicale.py  service_recommandation_antibioprophylaxie.py  service_specialite_chirurgicale.py
backend/infrastructure/api/: dependencies.py  main.py  schemas.py  serializers.py
backend/infrastructure/api/routes/: __init__.py  procedures.py  procedures_direct.py  specialites.py
backend/infrastructure/database/: db_initializer.py
backend/infrastructure/persistance/: database.py
backend/infrastructure/persistance/models/: __init__.py  modele_antibiotique.py  modele_base.py  modele_intervention_chirurgicale.py  modele_recommandation_antibioprophylaxie.py  modele_specialite_chirurgicale.py
backend/infrastructure/persistance/repositories/: repository_intervention_chirurgicale.py  repository_specialite_chirurgicale.py
backend/scripts/: init_db.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py
backend/tests/unit/application/services/: test_service_specialite_chirurgicale.py
backend/tests/unit/domaine/entites/: test_entite_base.py  test_specialite_chirurgicale.py
data/: rfe.json
docs/: EPIC-003-architecture.md  architecture-antibioprophylaxie-sfar-2026-02-16.md  bmm-workflow-status.yaml  deploiement-nas.md  prd-antibioprophylaxie-sfar-2026-02-15.md  product-brief-antibioprophylaxie-sfar-2026-02-15.md  research-reglementaire-academique-technique-2026-02-15.md  sprint-plan-antibioprophylaxie-sfar-2026-02-16.md  sprint-status.yaml  ux-design-antibioprophylaxie-sfar-2026-02-16.md
frontend/: Dockerfile  package-lock.json  package.json
research/: README.md  benchmark.json  benchmark.md
(+48 files in other folders)
