[project]
name = "recos-antibioprophylaxie-sfar"
version = "0.1.0"
description = "Webapp de consultation des recommandations d'antibioprophylaxie chirurgicale (RFE SFAR 2024)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Thomas Boulier" },
]
keywords = ["antibioprophylaxie", "SFAR", "anesthésie", "chirurgie", "recommandations"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rapidfuzz>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "pre-commit>=4.0",
]
ai = [
    "mistralai>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "langchain>=0.3",
    "chromadb>=0.5",
]
mcp = [
    "mcp>=1.0",
]
excel = [
    "openpyxl>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
