[project]
name = "antibioprophylaxie-sfar-backend"
version = "0.1.0"
description = "Backend pour l'application de recommandations d'antibioprophylaxie SFAR"
authors = [
    {name = "Thomas Boulier", email = "thomas.boulier@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "black>=23.10.1",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.7",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.7.3",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing"
